--- a/test22.html
+++ b/test22.html
@@ -161,37 +161,30 @@
     </div>
    
     <!-- Custom styles for this template -->
-    <link href="album.css" rel="stylesheet">
-<main role="main">
+<section mbr-id="_anchor" class="mbr-section article content1">
 
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row">
-          <div class="card-deck">
-  <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-    <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Miracle Queen</h5>
+    <mbr-parameters>
+    <!-- Block parameters controls (Blue "Gear" panel) -->
+        <input type="range" inline title="Top" name="paddingTop" min="0" max="8" step="1" value="4">
+        <input type="range" inline title="Bottom" name="paddingBottom" min="0" max="8" step="1" value="4">
+        <input type="color" title="Background Color" name="bgColor" value="#efefef">
+    <!-- End block parameters -->
+      </mbr-parameters>
+</section>
+  <div class="card mb-3" style="max-width: 540px;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="..." class="card-img" alt="...">
     </div>
-  </div>
-  <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-    <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Miracle Queen</h5>
-    </div>
-  </div>
-  <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-    <img src="assets/images/s3e26-700x394.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Miracle Queen</h5>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
     </div>
   </div>
 </div>
-        </div></div></div></div></main></div>
-    <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
 .footer {
    left: 0;
    bottom: 0;
