--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 
       <div class="row">
          <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="Felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+            <a href="felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
               <p class="card-text"><a href="felix.eng.html">Felix<br><br></a></p>
               <div class="d-flex justify-content-between align-items-center">
