--- a/test22.html
+++ b/test22.html
@@ -107,7 +107,12 @@
         </a>
     </div>
 </section>
-
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 <div class="album py-5 bg-light">
 <div class="container">
     <div class="row">
