--- a/test22.html
+++ b/test22.html
@@ -69,16 +69,35 @@
                 </li></ul>
           <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="" aria-expanded="true">
-                      <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-    <button class="dropdown-item" type="button">Action</button>
-    <button class="dropdown-item" type="button">Another action</button>
-    <button class="dropdown-item" type="button">Something else here</button>
+                      <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+                                           
+  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"><a title='ANGLAIS' style='color:#000000;'>
+            <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
+         </a>
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#">
+      <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/>
+      </a></li>
+      <li><a href="#">
+      <a title='ANGLAIS' style='color:#000000;'>
+            <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
+         </a>
+      </a></li>
+    </ul>
   </div>
 </div>
+
+</body>
                     </a>
                 </li></ul>
             
