--- a/index.html
+++ b/index.html
@@ -93,7 +93,12 @@
         </a>
     </div>
 </section>
-
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>If any alerts ads appear please be sure to contact me!</strong>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 <section class="accordion1 cid-rZ6FSDTYxe" id="accordion1-5s">
 
     
