--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
       <div class="row">
          <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
             <a href="felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
               <p class="card-text"><a href="felix.eng.html">Felix<br><br></a></p>
@@ -185,7 +185,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
             <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
               <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
@@ -196,7 +196,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+          <div class="card shadow-sm mb-5 bg-white rounded-0">
             <a href="miraclequeen.eng.html"><img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
               <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
