--- a/test22.html
+++ b/test22.html
@@ -129,12 +129,22 @@
 </head>
 <body>
 <br>
-<div class="footer">
-  <p>© 2020 ZAG, Method, Toei Animation, SAMG Animation, Disney, TF1, Globosat, SK Broadband. All Rights Reserved.
- <br>Any problems? Contact us : miraculous.fans.20@gmail.com<br>
-  </p>
-  <br>
-</div>
+<section once="footers" class="cid-s0Ny3dmfDT" id="footer6-7d">
+
+    
+
+    
+
+    <div class="container">
+        <div class="media-container-row align-center mbr-white">
+            <div class="col-12">
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">
+                    © Copyright 2019 Mobirise - All Rights Reserved
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
