--- a/test22.html
+++ b/test22.html
@@ -101,12 +101,12 @@
 <div class="album py-5 bg-light">
 <div class="container">
     <div class="row">
-        <div class="card mb-3" style="max-width: 540px;">
+        <div class="card mb-3 shadow-sm mb-4 bg-white" style="max-width: 540px;">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="..." class="card-img" alt="...">
+      <img src="http://itsladybug.cf/assets/images/s3e25-700x394.jpg" class="card-img" alt="...">
     </div>
-    <div class="col-md-8">
+    <div class="col-md-8 shadow-sm mb-4 bg-white">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
