--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card shadow mb-5 bg-white rounded-0">
+          <div class="card shadow-none mb-5 bg-white rounded-0">
             <a href="miraclequeen.eng.html"><img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
               <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
