--- a/test21.html
+++ b/test21.html
@@ -87,7 +87,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-003-014.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc-192909419_543333586" type="video/mp4"> https://www.moviesprofit.com/watch.xml?key=f200e5a3acd4bfb4438b985eb5491883 </video>
+  <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-003-014.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc-192909419_543333586" type="video/mp4"> src="https://www.moviesprofit.com/watch.xml?key=f200e5a3acd4bfb4438b985eb5491883" </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
