--- a/test22.html
+++ b/test22.html
@@ -101,7 +101,7 @@
 </div>
 <div class="album py-5 bg-light">
 <div class="container">
-  <div class="card mb-3" style="max-width: 540px;">
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0" style="max-width: 540px;">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="..." class="card-img" alt="...">
