--- a/test22.html
+++ b/test22.html
@@ -104,7 +104,7 @@
   <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0" style="max-width: 540px;">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="assets/images/s3e23-700x394.jpg" class="card-img" alt="...">
+      <img src="https://seriex.to/assets/img/thumbnails/1562457908.jpg" class="card-img" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
