--- a/contact.html
+++ b/contact.html
@@ -75,46 +75,17 @@
         </div>
     </nav>
 </section>
-<div class="container">
-        <div class="row justify-content-center">
-            <div class="title col-12 col-lg-8">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                    <br><br><br>CONTACT FORM
-                </h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Report any problems here!</h3>
-            </div>
-        </div>
+<div class="form-row align-items-center">
+    <div class="col-auto my-1">
+      <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
+      <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
     </div>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="media-container-column col-lg-8" data-form-type="formoid">
-                <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LTpLqVDydXxysmUwWM9VvDnVUysRBxh1lEYfpORg3q43PgQ1eH6iAH6zPdrI/IPJLFTnmBs/Noc17quJiCDzEO9N2+Ylc9hx+lbp4u388lxVX1vqxa6M3qHvRUxuXWtp">
-                    <div class="row">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12"></div>
-                        <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
-                        </div>
-                    </div>
-                    <div class="dragArea row">
-                        <div class="col-md-4  form-group" data-for="name">
-                            <label for="name-form1-7t" class="form-control-label mbr-fonts-style display-7">Name</label>
-                            <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-7t">
-                        </div>
-                        <div class="col-md-4  form-group" data-for="email">
-                            <label for="email-form1-7t" class="form-control-label mbr-fonts-style display-7">Email</label>
-                            <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-7t">
-                        </div>
-                        
-                        <div data-for="message" class="col-md-12 form-group">
-                            <label for="message-form1-7t" class="form-control-label mbr-fonts-style display-7">Message</label>
-                            <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-7t"></textarea>
-                        </div>
-                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4">SEND FORM</button></div>
-                    </div>
-                </form><!---Formbuilder Form--->
-            </div>
-        </div>
-    </div>
+                      
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
   <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
