--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,10 @@
       <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
       <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
         <option selected>Choose...</option>
-        <option value="1">One</option>
+        <option value="1">
+        <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
+         </a>
+        </option>
         <option value="2">Two</option>
         <option value="3">Three</option>
       </select>
