--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,8 @@
       <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
         <option selected>Choose Languages</option>
         <option value="1">
-        <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
+        <a title='ANGLAIS' href='page80.html' style='color:#000000;'>
+            <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
          </a>
         </option>
         <option value="2">Two</option>
