--- a/s1e03.fr.html
+++ b/s1e03.fr.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>The Pharaoh/fr</title>
+  <title>Le Pharaon/fr</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -77,7 +77,7 @@
 </section>
 
 <section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAua27jJS" id="custom-html-1y" data-rv-view="287">
-  <h1><br><br><br><br><br>The Pharaoh</h1>
+  <h1><br><br><br><br><br>Le Pharaon</h1>
    <hr>
   <p>Season 1 Episode 3</p>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
@@ -108,7 +108,7 @@ window.player = player;
     <div class=".container-fluid">
         <div class="media-container-fluid title">
             <div class="p-3 my-3 bg-dark text-white">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc432326012_552894524">Download</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc432326012_552894524">Télecharger</a></div>
 </div></div></div></section>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
