--- a/s1e04.fr.html
+++ b/s1e04.fr.html
@@ -79,7 +79,7 @@
 <section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAunIm0F5" id="custom-html-20" data-rv-view="290">
   <h1><br><br><br><br><br>Lady Wifi</h1>
    <hr>
-  <p>Season 1 Episode 4</p>
+  <p>Saison 1 Episode 4</p>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
  <script>
@@ -108,7 +108,7 @@ window.player = player;
     <div class=".container-fluid">
         <div class="media-container-fluid title">
             <div class="p-3 my-3 bg-dark text-white">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc432326012_552894645">Download</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc432326012_552894645">Télecharger</a></div>
 </div></div></div></section>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
