--- a/s1e03.it.html
+++ b/s1e03.it.html
@@ -87,7 +87,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://vignette.wikia.nocookie.net/lady-bug/images/e/e7/SW_%28331%29.png/revision/latest?cb=20181027232243" id="player" playsinline="" controls=""> <source src="https://vk.com/doc432326012_548837638" type="video/mp4"> </video>
+  <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-001-003.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc432326012_548837638" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
