--- a/test22.html
+++ b/test22.html
@@ -93,7 +93,6 @@
         </a>
     </div>
 </section>
-  <div class="b-c b-text-c b-s b-s-t60 b-s-b60 cf"><p><font class="wnd-font-size-160"><strong>LATEST EPISODES</strong></font>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <font class="wnd-font-size-80">SHOWS ALL</font></p></div>
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
   <strong>If any alerts ads appear please be sure to contact me!</strong>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -214,7 +213,7 @@
 
   </div>
     <div class="row">
-        <h1>&nbsp; Latest episodes<br><br></h1>
+        <h1>&nbsp; Latest episodes<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <font class="wnd-font-size-80">SHOWS ALL</font></p></h1>
       </div>
     </div>
    
