--- a/miraclequeen.eng.html
+++ b/miraclequeen.eng.html
@@ -87,7 +87,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-003-026.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc-192909419_543333785" type="video/mp4"> </video>
+  <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-003-026.jpg" id="player" playsinline="" controls=""> <source src="https://wave.video/embed/5ebee9a846e0fb002f916adb/5ebee9a846e0fb002f916ade.mp4" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
