--- a/miraclequeen.eng.html
+++ b/miraclequeen.eng.html
@@ -87,7 +87,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-003-026.jpg" id="player" playsinline="" controls=""> <source src="https://wave.video/embed/5ebee9a846e0fb002f916adb/5ebee9a846e0fb002f916ade.mp4" type="video/mp4"> </video>
+  <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-003-026.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc432326012_544051703" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
@@ -108,7 +108,7 @@ window.player = player;
     <div class=".container-fluid">
         <div class="media-container-fluid title">
             <div class="p-3 my-3 bg-dark text-white">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc-192909419_543333785">Download</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc432326012_544051703">Download</a></div>
 </div></div></div></section>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
