--- a/test22.html
+++ b/test22.html
@@ -115,6 +115,18 @@
     </div>
   </div>
 </div>
+  <section class="mbr-section article content9 cid-s1DfDcH9wv" id="content9-84">
+    
+     
+
+    <div class="container">
+        <div class="inner-container" style="width: 100%;">
+            <hr class="line" style="width: 100%;">
+            <div class="section-text align-center mbr-fonts-style display-5"><strong>NEWS!</strong><br></div>
+            <hr class="line" style="width: 100%;">
+        </div>
+        </div>
+</section>
   <!--Accordion wrapper-->
 <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
 
