--- a/test21.html
+++ b/test21.html
@@ -93,7 +93,16 @@
         </a>
     </div>
 </section>
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
   <strong>If any alerts ads appear please be sure to contact me!</strong>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
@@ -164,6 +173,9 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+  </body>
+</html>
+
 <section class="accordion1 cid-rZ6FSDTYxe" id="accordion1-5s">
 
     
