--- a/test21.html
+++ b/test21.html
@@ -109,8 +109,8 @@
     <div class="carousel-item active">
       <img src="http://itsladybug.cf/assets/images/s3e23-700x394.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5><div class="container">
-  <!-- Trigger the modal with a button -->
+        <div class="container">
+<!-- Trigger the modal with a button -->
   <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">WATCH NOW</button>
 
   <!-- Modal -->
@@ -136,7 +136,8 @@
     </div>
   </div>
   
-</div></h5>
+</div>
+        <h5></h5>
         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
       </div>
     </div>
