--- a/test21.html
+++ b/test21.html
@@ -93,7 +93,34 @@
         </a>
     </div>
 </section>
-  <iframe src="https://player.twitch.tv/?channel=wayzzworld&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+  <div class="container">
+<!-- Trigger the modal with a button -->
+  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">WATCH NOW</button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Covid-19 special clip</h4>
+        </div>
+        <div class="modal-body">
+          <div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IaLYVHz7k00" allowfullscreen></iframe>
+</div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+  
+</div>
   <div class="alert alert-warning alert-dismissible fade show" role="alert">
   <strong>If any alerts ads appear please be sure to contact me!</strong>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
