--- a/test21.html
+++ b/test21.html
@@ -94,7 +94,7 @@
     </div>
 </section>
   <div class="container">
-<!-- Trigger the modal with a button -->
+  <!-- Trigger the modal with a button -->
   <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">WATCH NOW</button>
 
   <!-- Modal -->
@@ -105,7 +105,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Covid-19 special clip</h4>
+          <h4 class="modal-title">COVID-19 SPECIAL CLIP</h4>
         </div>
         <div class="modal-body">
           <div class="embed-responsive embed-responsive-16by9">
