--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
         <a title='ANGLAIS' href='page80.html' style='color:#000000;'>
          </a>
         </option>
-        <option value="2">Two</option>
+        <option href='page80.html' value="2">Two</option>
         <option value="3">Three</option>
       </select>
     </div>
