--- a/contact.html
+++ b/contact.html
@@ -87,8 +87,8 @@
         <a title='ANGLAIS' href='page80.html' style='color:#000000;'>
          </a>
         </option>
-        <option href='page80.html' value="2">Two</option>
-        <option value="3">Three</option>
+        <option value="page80.html">Two</option>
+        <option value="page80">Three</option>
       </select>
     </div>
   <div class="more_options" style="margin-bottom:23px;margin-left:10px;margin-right:10px;">
