--- a/contact.html
+++ b/contact.html
@@ -83,11 +83,9 @@
       <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
       <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
         <option selected>Choose Languages</option>
-        <option value="1">
-        <a title='ANGLAIS' href='page80.html' style='color:#000000;'>
-         </a>
+        <option <a href="felix.eng.html">Felix</a> value="1">
         </option>
-        <option value="page80.html">Two</option>
+        <option href="felix.eng.html"> value="page80">Two</option>
         <option value="page80">Three</option>
       </select>
     </div>
