--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,7 @@
     <div class="row">
       <h1><br><br><br><br><br>Full episodes<br><br></h1>
   </div>
+  <li><a class="tabBtn" href="#"><img class="langImg" style="margin-right:10px;" width="30" height="40"><select class="langChoose select-css"><option value="eng">English</option><option value="fr">Français</option><option value="es">Español Europeo</option></select></a></li>
   <div class="form-row align-items-center">
     <div class="col-auto my-1">
       <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
