--- a/contact.html
+++ b/contact.html
@@ -80,9 +80,9 @@
   </div>
  <a class="menu-item">
 		<select name="forma" onchange="location = this.value;">
- <option>🇬🇧 English</option>
- <option value="/page80">🇪🇸 Español</option>
- <option value="/episodes.fr">🇫🇷 Français</option>
+ <option><img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/>English</option>
+ <option value="/page80"><img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> Español</option>
+ <option value="/episodes.fr"> Français</option>
 </select>
         </a>
   <div class="form-row align-items-center">
