--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
   </div>
  <a class="menu-item">
 		<select name="forma" onchange="location = this.value;">
- <option><img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/>English</option>
+ <option <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/>English</option>
  <option value="/page80"><img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> Español</option>
  <option value="/episodes.fr"> Français</option>
 </select>
