--- a/contact.html
+++ b/contact.html
@@ -81,11 +81,7 @@
  <a class="menu-item">
 		<select name="forma" onchange="location = this.value;">
  <option>English</option>
- <option value="/page80">
-<a title='ANGLAIS' href='page80.html' style='color:#000000;'>
-            <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/> ENGLISH
-         </a>
-</option>
+ <option value="/page80"><img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/>22</option>
  <option value="/episodes.fr"> Français</option>
 </select>
         </a>
