--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,15 @@
     <div class="row">
       <h1><br><br><br><br><br>Full episodes<br><br></h1>
   </div>
- <a class="menu-item">
+ <div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+  <a href="#page80.html"><img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/>english</a>
+  <a href="#">Link 2</a>
+  <a href="#">Link 3</a>
+  </div>
+</div>
+	<a class="menu-item">
 		<select name="forma" onchange="location = this.value;">
  <option>English</option>
  <option value="/page80"><img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/>22</option>
