--- a/contact.html
+++ b/contact.html
@@ -79,9 +79,6 @@
       <h1><br><br><br><br><br>Full episodes<br><br></h1>
   </div>
 	<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown
-  </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
     <button class="dropdown-item" type="button">Action</button>
     <button class="dropdown-item" type="button">Another action</button>
@@ -90,8 +87,14 @@
 </div>
 	<a class="menu-item">
 		<select name="forma" onchange="location = this.value;">
+ <button class="dropdown-item" type="button">Action</button>
+    <button class="dropdown-item" type="button">Another action</button>
+    <button class="dropdown-item" type="button">Something else here</button>
+</select>
+        </a>
+	<a class="menu-item">
+		<select name="forma" onchange="location = this.value;">
  <option>English</option>
- <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/><option value="/page80">22</option>
  <option value="/episodes.fr"> Français</option>
 </select>
         </a>
