--- a/contact.html
+++ b/contact.html
@@ -78,14 +78,7 @@
     <div class="row">
       <h1><br><br><br><br><br>Full episodes<br><br></h1>
   </div>
-	<div class="dropdown">
-  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-    <button class="dropdown-item" type="button">Action</button>
-    <button class="dropdown-item" type="button">Another action</button>
-    <button class="dropdown-item" type="button">Something else here</button>
-  </div>
-</div>
-	<a class="menu-item">
+	<a class="dropdown-item">
 		<select name="forma" onchange="location = this.value;">
  <button class="dropdown-item" type="button">Action</button>
     <button class="dropdown-item" type="button">Another action</button>
