--- a/contact.html
+++ b/contact.html
@@ -78,13 +78,6 @@
     <div class="row">
       <h1><br><br><br><br><br>Full episodes<br><br></h1>
   </div>
-	<a class="dropdown-item">
-		<select name="forma" onchange="location = this.value;">
- <button class="dropdown-item" type="button">Action</button>
-    <button class="dropdown-item" type="button">Another action</button>
-    <button class="dropdown-item" type="button">Something else here</button>
-</select>
-        </a>
 	<a class="menu-item">
 		<select name="forma" onchange="location = this.value;">
  <option>English</option>
@@ -96,9 +89,8 @@
       <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
       <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
         <option selected>Choose Languages</option>
-        <option <a href="felix.eng.html">Felix</a> value="1">
-        </option>
-        <option href="felix.eng.html"> value="page80">Two</option>
+        <option value="/page80">FRENCH</option>
+        <option value="page80">Two</option>
         <option value="page80">Three</option>
       </select>
     </div>
