--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,13 @@
     <div class="row">
       <h1><br><br><br><br><br>Full episodes<br><br></h1>
   </div>
+	<label class="my-1 mr-2" for="inlineFormCustomSelectPref"> <img style='margin-top: -3px;'width='23px' src='https://seriex.to/assets/img/flags/flag-en.jpg'/></label>
+  <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+    <option selected>Choose...</option>
+    <option value="/page80">One</option>
+    <option value="2">Two</option>
+    <option value="3">Three</option>
+  </select>
 	<a class="menu-item">
 		<select name="forma" onchange="location = this.value;">
  <option>English</option>
