--- a/test21.html
+++ b/test21.html
@@ -83,7 +83,12 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Miraculous Ladybug!</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Catch All the news and episodes here!</p>
-                
+                <a class="menu-item">
+		<select name="forma" onchange="location = this.value;">
+ <option>English</option>
+ <option value="/episodes.fr"> Français</option>
+</select>
+        </a>
             </div>
         </div>
     </div>
