--- a/test21.html
+++ b/test21.html
@@ -65,17 +65,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">Full episodes
-                    </a>
-                </li>
-		<li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">
-			    <a class="menu-item">
-		<select name="forma" onchange="location = this.value;">
- <option>English</option>
- <option value="/episodes.fr"> Français</option>
-</select>
-		    </a>
-                    </a>
+			</a>
                 </li>
 		</ul>
             
@@ -221,6 +211,7 @@
 <div class="album py-5 bg-light">
 <div class="container">
     <div class="row">
+	    hr { display: block; margin-before: 0.5em; margin-after: 0.5em; margin-start: auto; margin-end: auto; overflow: hidden; border-style: inset; border-width: 1px;}
         <h1>&nbsp; Latest episodes<br><br></h1>
       </div>
     </div>
