--- a/test21.html
+++ b/test21.html
@@ -211,7 +211,7 @@
 <div class="album py-5 bg-light">
 <div class="container">
     <div class="row">
-	    hr { display: block; margin-before: 0.5em; margin-after: 0.5em; margin-start: auto; margin-end: auto; overflow: hidden; border-style: inset; border-width: 1px;}
+	    <hr style="width:50%;text-align:left;margin-left:0">
         <h1>&nbsp; Latest episodes<br><br></h1>
       </div>
     </div>
