--- a/test21.html
+++ b/test21.html
@@ -211,7 +211,7 @@
 <div class="album py-5 bg-light">
 <div class="container">
     <div class="row">
-	    <hr style="width:50%;text-align:left;margin-left:0">
+	    <hr style="height:2px;border-width:0;color:gray;background-color:gray"><br>
         <h1>&nbsp; Latest episodes<br><br></h1>
       </div>
     </div>
